feat(pre-submission-2): replaced placeholder text with final arguments on landing page
Updated the main section of the pre-submission-2 landing page with six fresh reasons against using Bootstrap, replacing all lorem ipsum placeholders.

--- a/pages/pre-submission-2/index.html
+++ b/pages/pre-submission-2/index.html
@@ -73,9 +73,9 @@
                 <h2 class="reasons-title">Reasons to not use Bootstrap</h2>
                 <div class="reasons-grid">
                     <article class="reason-item">
-                        <h3 class="reason-title">Lorem ipsum</h3>
+                        <h3 class="reason-title">Because you actually want to learn CSS</h3>
                         <p class="reasons-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
+                        Using Bootstrap to learn front-end is like using Google Translate to learn French. You'll say stuff, but you won’t know why it works—or worse, why it breaks.
                         </p>
                         <div class="main-content-icons">
                             <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -84,9 +84,9 @@
                         </div>
                     </article>
                     <article class="reason-item">
-                        <h3 class="reason-title">Lorem ipsum</h3>
+                        <h3 class="reason-title">Because it's not 2015 anymore</h3>
                         <p class="reasons-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
+                        It had its moment. Now, CSS Grid and Flexbox do the layout heavy lifting natively, without forcing you to memorize <code>.row</code>, <code>.col-sm-6</code>, and other arcane incantations.
                         </p>
                         <div class="main-content-icons">
                             <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -95,9 +95,9 @@
                         </div>
                     </article>
                     <article class="reason-item">
-                        <h3 class="reason-title">Lorem ipsum</h3>
+                        <h3 class="reason-title">Because 200kb of CSS for 3 buttons is absurd</h3>
                         <p class="reasons-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
+                        Modern websites should be lean. Bootstrap is like bringing a semi-truck to deliver a pizza. Efficient? No. Overkill? Always.
                         </p>
                         <div class="main-content-icons">
                             <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -106,9 +106,9 @@
                         </div>
                     </article>
                     <article class="reason-item">
-                        <h3 class="reason-title">Lorem ipsum</h3>
+                        <h3 class="reason-title">Because you want your site to look *yours*</h3>
                         <p class="reasons-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
+                        Bootstrap sites are like IKEA furniture: functional, familiar, and instantly forgettable. If you care about originality, start from scratch.
                         </p>
                         <div class="main-content-icons">
                             <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -117,9 +117,9 @@
                         </div>
                     </article>
                     <article class="reason-item">
-                        <h3 class="reason-title">Lorem ipsum</h3>
+                        <h3 class="reason-title">Because overriding Bootstrap in this project was a nightmare</h3>
                         <p class="reasons-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
+                        You wanted to make a small style tweak. Now you're deep in `!important` hell fighting specificity wars with <code>.btn-primary</code>. Just… don’t.
                         </p>
                         <div class="main-content-icons">
                             <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -128,9 +128,9 @@
                         </div>
                     </article>
                     <article class="reason-item">
-                        <h3 class="reason-title">Lorem ipsum</h3>
+                        <h3 class="reason-title">Because “everyone uses it” is not a good reason</h3>
                         <p class="reasons-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer facilisis risus nec turpis vulputate, at vestibulum nisl lacinia.
+                        If your only defense for Bootstrap is “it's standard in this course,” maybe the course needs a rewrite. You're building for users, not for outdated views.
                         </p>
                         <div class="main-content-icons">
                             <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
