feat(pre-submission-2): added mandatory Bootstrap element to each HTML page
Included one ugly Bootstrap button per page to meet evaluation criteria, positioned outside main layout as a quick return link to the CODER PROJECTS landing page.

--- a/pages/pre-submission-2/index.html
+++ b/pages/pre-submission-2/index.html
@@ -11,6 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="back-to-main-land">
+        <a href="../../index.html"><button type="button" class="btn btn-secondary give-me-height">Back to MAIN LANDING</button></a>
+        <p>&lt;- Mandatory Bootstrap element.</p>
+    </div>
     <div class="grid-container">
         <aside>
             <nav class="semantic-navbar">
