feat(coder-projects): linked pre-submission 1 and 2 to main landing
Added navigation links from both pre-submission pages to the main landing project page. Inserted 'Back to Main Landing' button in every HTML of pre-submission 1.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       </div>
       <div class="projects">
         <ul>
-          <li class="pre-submissions"><a href="pre-submission-1/index.html"><img src="assets/images/pre-submission-1-thumb.png" alt="thumbnail for first pre submission"></a></li>
-          <li class="pre-submissions"><a href="#"></a><img src="assets/images/pre-submission-1-thumb.png" alt="thumbnail for second pre submission"></li>
-          <li class="pre-submissions"><a href="#"></a><img src="assets/images/pre-submission-1-thumb.png" alt="thumbnail for third pre submission"></li>
+          <li class="pre-submissions"><a href="pages/pre-submission-1/index.html"><img src="assets/images/pre-submission-1-thumb.png" alt="thumbnail for first pre submission"></a></li>
+          <li class="pre-submissions"><a href="pages/pre-submission-2/index.html"><img src="assets/images/pre-submission-2-thumb.png" alt="thumbnail for second pre submission"></a></li>
+          <li class="pre-submissions"><a href="#"></a><img src="#" alt="thumbnail for third pre submission"></li>
         </ul>
       </div>
     </div>
@@ -39,7 +39,7 @@
         The result is a complete, fully responsive website that demonstrates both design and development skills.</p>
       </div> 
       <div class="thum-final">
-        <img src="assets/images/pre-submission-1-thumb.png" alt="thumbnail for first pre submission">
+        <img src="#" alt="thumbnail for final project">
       </div> 
     </div>
   </main>
