--- a/pages/pre-submission-1/contacto.html
+++ b/pages/pre-submission-1/contacto.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
+  <a class="back-to-main" href="../../index.html">Back to Main Landing</a>
   <header>
     <div class="logo-container">
       <img class="logo-caiman" src="assets/logo.png" alt="Logo Caimán" />
